<resources>
    <string name="app_name">信之源</string>
    <string name="title_push_scan">推荐场景</string>
    <string name="title_activity_equipment">装 备</string>
    <string name="title_activity_venue">场 地</string>
    <string name="title_push_venue">国内专家</string>
    <string name="title_push_venue_snzj">省内专家</string>
    <string name="title_push_venue_zlzj">肿瘤专家</string>
    <string name="title_push_venue_fzzd">辅助诊断</string>
    <string name="title_push_venue_zjlist">专家列表</string>
    <string name="title_push_venue_topnews">医学资讯</string>
    <string name="title_activity_venue_view">详情</string>
    <string name="title_activity_venue_order">场地订单</string>
    <string name="title_activity_sms_identifying_code">注 册</string>
    <string name="title_activity_login_code">登 录</string>
    <string name="title_activity_find_pwd">找回密码</string>
    <string name="title_activity_identify1">身份证正面照</string>
    <string name="title_activity_identify2">身份证背面照</string>
    <string name="title_activity_upload_pic">点击上传照片</string>
    <string name="title_activity_my_info">个人资料</string>
    <string name="title_activity_my_identify">身份认证</string>
    <string name="title_activity_my_update_pwd">修改密码</string>
    <string name="title_activity_my_update_phone">修改手机号</string>
    <string name="title_activity_my_assess">我的评价</string>
    <string name="title_activity_my_fav">我的收藏</string>
    <string name="title_activity_my_reply">我的回复</string>
    <string name="title_activity_my_order">我的订单</string>
    <string name="title_activity_my_quit">退出登录</string>
    <string name="login_activity_tital">用户登录</string>
    <string name="register_activity_tital">用户注册</string>
    <string name="title_regi_phone">请输入手机号码</string>
    <string name="title_regi_point">请输入手机号码、设置密码并输入获取到的验证码</string>
    <string name="title_login_point">请输入身份证号码、密码进行登录</string>
    <string name="enter_phone_number">帐&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="enter_idcard">身份证号</string>
    <string name="enter_pwd_number">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="enter_pwd_regular">6-15位数字、字母或符号组合</string>
    <string name="enter_pwd_regular1">6-15位数字、大小写字母组合</string>
    <string name="enter_pwd_confirm">请重复输入上面的密码</string>
    <string name="enter_validate_number">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="title_confirm">确 认</string>
    <string name="title_area_search">区域范围</string>
    <string name="title_default_search">默认排序</string>
    <string name="title_reserve">预 约</string>
    <string name="title_open_time">开放时间：</string>
    <string name="title_venue_num">场地数量：</string>
    <string name="title_venue_nature">场地性质：</string>
    <string name="title_venue_select_time">选择时间</string>
    <string name="title_start_date">开始日期：</string>
    <string name="title_end_date">结束日期：</string>
    <string name="title_start_time">开始时间：</string>
    <string name="title_end_time">结束时间：</string>
    <string name="title_venue_order_confirm">备注：选择预约的时间段、日期和时间</string>
    <string name="title_venue_order_content">给商家捎句话：</string>
    <string name="no_data">没有数据</string>
    <string name="user_name">昵&#160;称：</string>
    <string name="user_sex">性&#160;别：</string>
    <string name="user_age">年龄段：</string>
    <string name="user_job">职&#160;业：</string>
    <string name="head_img">头&#160;像：</string>
    <string name="btn_save">保存</string>
    <string name="editor_user_job">请输入你的职业</string>
    <string name="editor_user_name">请输入昵称</string>
    <string name="please_input_phone_number">请输入联系电话</string>
    <string name="please_input_taking_name">请输入收货人姓名</string>
    <string name="please_input_postAddress">请输入邮编</string>
    <string name="please_input_address_info">请输入详细地址</string>
    <string name="no_sure">待确认</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="input_discuss">请输入你的评论:</string>
    <string name="discuss_content">评论内容</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_equipment_details">EquipmentDetailsActivity</string>
    <string name="title_activity_user_discuss">UserDiscussActivity</string>
    <string name="get_code">获取验证码</string>
    <string name="title_activity_find_pass_word">FindPassWordActivity</string>
    <string name="server">服务</string>
    <string name="merchandise">商品</string>
    <string name="more">更多</string>
    <string name="menu_tab_index">首页</string>
    <string name="menu_tab_diag">辅助诊断</string>
    <string name="menu_tab_pacs">检查报告</string>
    <string name="menu_tab_mine">我的</string>
    <!--频道管理-->
    <string name="drawer_btn_rss">频道管理</string>
    <string name="title_bar_pacs">影像列表</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>

    <string name="hello_world">欢迎</string>
    <string name="action_settings">设置</string>

    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!-- TODO: 注册页面 -->
    <string name="register">用户注册</string>
</resources>
