<!-- 用户注册 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milkYellow"
    android:orientation="vertical"
    tools:context=".SmsIdentifyingCodeActivity">
    <!-- 标题 -->
    <include layout="@layout/home_top_title1"/>

    <TextView
        android:text="@string/title_regi_point"
        android:layout_width="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <!-- 灰色分割线 手机号码 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_Gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_point1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_White"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/enter_phone_number"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|right"
            android:textSize="16sp"/>

        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/phone"
            android:inputType="phone"
            android:hint="请输入手机号码"
            android:textColor="@color/bg_Gray_light"
            android:textSize="12sp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edittext"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/hqyzm"
            android:onClick="getValidateBtnClick"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:gravity="right"
            android:layout_gravity="right"/>

    </LinearLayout>

    <!-- 灰色分割线 密码-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_Gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_point2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_White"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/enter_pwd_number"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|right"
            android:textSize="16sp"/>

        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/pwd"
            android:numeric="integer"
            android:hint="@string/enter_pwd_regular"
            android:textSize="12sp"
            android:textColor="@color/bg_Gray_light"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edittext"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <!-- 灰色分割线 验证码-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_Gray"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_point3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_White"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/enter_validate_number"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|right"
            android:textSize="16sp"/>

        <EditText
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/validateCode"
            android:numeric="integer"
            android:hint="请输入验证码"
            android:textSize="12sp"
            android:textColor="@color/bg_Gray_light"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edittext"/>

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <!-- 灰色分割线 确认-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_Gray"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="getUserRegiBtnClick"
            android:src="@drawable/qr"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_confirm"
            android:textColor="@color/white"
            android:textSize="18dip"
            android:gravity="center"/>
    </FrameLayout>

</LinearLayout>
